Added some new lines for the loading tips :)

--- a/loading_tips_l_english.yml
+++ b/loading_tips_l_english.yml
@@ -71,4 +71,5 @@ LOADING_TIP_68:0 "Fuck Beijing \n- Coffeeccubus"
 LOADING_TIP_69:0 "If ears have point, passem the joint, if ears are round, puttem in the ground \n- Jun-se Khamen al-Qamiya"
 LOADING_TIP_70:0 "Rest in peace Potato King \n- Minecraft Community"
 LOADING_TIP_71:0 "Can a n'wah borrow some fruit rolls? \n- oShotty"
-LOADING_TIP_71:0 "I hate Bardonia, fuck them stinky bards \n- Aaronx4b"
+LOADING_TIP_72:0 "I hate Bardonia, fuck them stinky bards \n- Aaronx4b"
+LOADING_TIP_73:0 "You have been banned from Stoneworks. Reason: Having too much fun. \n- Stoneworks Staff Team"
